bo sung hieu ung

--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@
         "PHƯƠNG THẢO ❤️",
         "Chúc em một ngày sinh nhật siêu rực rỡ! 🎉",
         "IMG: ./cupble.jpg",
+        "Vô tư hồn nhiên yêu đời! 🎉",
+        "IMG: ./dapbanh.gif",
         "13.08.2025",
         "HEART",
       ];
@@ -370,7 +372,7 @@
           display.classList.add("show");
           index++;
           if (index < messages.length) {
-            setTimeout(showMessage, 2500);
+            setTimeout(showMessage, 3000);
           }
         }, 1000);
       }
